--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
+    "react-select": "^5.7.3",
     "reactstrap": "^9.1.9",
     "tinymce": "^6.4.2"
   },
